Add class SpaceShip

--- a/HW_Klyushin_1/HW_Klyushin_1.csproj
+++ b/HW_Klyushin_1/HW_Klyushin_1.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Saturn.cs" />
+    <Compile Include="SpaceShip.cs" />
     <Compile Include="SplashScreen.cs">
       <SubType>Form</SubType>
     </Compile>
