Переработан геймплей, изменено движение астероидов, добавлен класс аптечек

--- a/HW_Klyushin_1/HW_Klyushin_1.csproj
+++ b/HW_Klyushin_1/HW_Klyushin_1.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Bullet.cs" />
     <Compile Include="Earth.cs" />
     <Compile Include="ICollision.cs" />
+    <Compile Include="MedicalKit.cs" />
     <Compile Include="Records.cs">
       <SubType>Form</SubType>
     </Compile>
